@@ -39,6 +39,7 @@ NEWS
   * Fix x-sendfile 2gb limiting (fixes #1970)
   * Fix mod_cgi environment keys mangling (fixes #1969)
   * Fix workaround for incorrect path info/scriptname if scgi prefix is "/" (fixes #729)
+  * Fix max-age value in mod_expire for 'modification' (fixes #1978)
 
 - 1.4.22 - 2009-03-07
   * Fix wrong lua type for CACHE_MISS/CACHE_HIT in mod_cml (fixes #533)
